--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -35,7 +35,10 @@
 <tr><td width="742"><h3><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/18/n12820100.md#1" target="_blank">【名家专栏】抵制中共举办冬奥的9大控诉</a><br></h3><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/18/n12820100.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/03/GettyImages-989615558-1200x786-150x120.jpg" align ="left"></a>中国，被国际社会视为受人尊敬的成员的时代，已经是很久以前的事了。中共不仅残酷镇压自己的人民，而且其行径对全世界的自由与和平发展，也明显构成实质的危害。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年03月19日 5:09 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/18/n12820661.md#1" target="_blank">宋善：缅怀人权受害者 以真相伸张正义</a><br></h3><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/18/n12820661.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/04/20150716-37-150x120.jpg" align ="left"></a>二零二一年三月十七日明慧网报导，河南省郑州市二七区法轮功学员郭保军，于二零一九年十一月十日发送真相资料被警察绑架构陷，遭非法判刑两年。郭保军坚持信仰真、善、忍，绝食抗议中共关押迫害。直到去年十二月三日之前，一年多的日子里，家属从未被允许会晤郭保军。今年三月十四日，看守所以短信通知家人说，郭保军已经去世。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年03月19日 4:35 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/18/n12820631.md#1" target="_blank">未普：人口负增长陷阱或成中国崛起的超级黑天鹅</a><br></h3><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/18/n12820631.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2016/10/1606040316491758-150x120.jpg" align ="left"></a>最近，西方媒体、国际组织、中国学界与政界不约而同地刊文报道同一个中国社会政治现象：中国将在今后数年内陷入人口负增长陷阱。这或许会成为中国崛起的超级黑天鹅。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年03月19日 4:00 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/20/n12824375.md#1" target="_blank">【名家专栏】美国卓异主义vs中国共产主义</a><br></h3>美国卓异主义（又称美国例外主义，American exceptionalism*）与中国共产主义之间的碰撞将定义21世纪。胜者很可能决定未来一百年（甚至更远）的全球格局。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年03月21日 10:15 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/16/n12814601.md#1" target="_blank">大成漫画：华大妈 不容易</a><br></h3><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/16/n12814601.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/03/a095c5330c5b413c357a7da7fa320464-150x120.jpg" align ="left"></a>华大妈，不容易：
+说话经常遭非议，
+俺是平民老百姓，
+也来唠唠这话题。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年03月19日 3:36 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/20/n12824710.md#1" target="_blank">王友群：第二任中共党魁瞿秋白的最后结局</a><br></h3>瞿秋白，江苏省常州人，1917年考入中华民国外交部“不要学费又有‘出身’”的俄文专修馆。1921年，作为记者，被派驻莫斯科。1921年5月，加入俄罗斯共产党。1922年春，加入中共。早年做了大量介绍俄国革命和宣传马克思主义的工作。
 
 从1925年1月起，瞿秋白在中共第四、五、六次全国代表大会上，当选中央委员、政治局.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年03月21日 6:35 AM			</td></tr>
