--- a/gb/nsc1002.md
+++ b/gb/nsc1002.md
@@ -17,7 +17,7 @@
 <tr><td><h3><a href="https://github.com/tqgufc361/djy/blob/master/gb/19/10/2/n11563614.md#1" target="_blank">牛蒡是“回春食材” 专家：3招吃法更清肠抗老</a><br></h3><a href="https://github.com/tqgufc361/djy/blob/master/gb/19/10/2/n11563614.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2019/10/burdock-1002-320x200.jpg"></a></td></tr>
 <tr><td><h3><p><strong>饮食、生活、疾病、中医</strong></p></h3></td></tr><tr><td>
 <h3><a href="https://github.com/tqgufc361/djy/blob/master/gb/21/3/11/n12803636.md#1" target="_blank">【重播】喝茶助防疫吗？6大茶系怎么选</a><br></h3>
-<h3><a href="https://github.com/tqgufc361/djy/blob/master/gb/21/3/12/n12805998.md#1" target="_blank">做有氧运动比肌肉训练更好？增肌10大迷思破解</a><br></h3>
+<h3><a href="https://github.com/tqgufc361/djy/blob/master/gb/21/3/12/n12805998.md#1" target="_blank">有氧运动比增肌训练更好？增肌10大迷思破解</a><br></h3>
 <h3><a href="https://github.com/tqgufc361/djy/blob/master/gb/21/3/12/n12808226.md#1" target="_blank">三大坏坐姿排名 第一名是它！教你正确坐姿</a><br></h3>
 <h3><a href="https://github.com/tqgufc361/djy/blob/master/gb/21/3/13/n12808403.md#1" target="_blank">五种食物加强你的免疫系统 而且很常见</a><br></h3>
 <h3><a href="https://github.com/tqgufc361/djy/blob/master/gb/21/3/16/n12815193.md#1" target="_blank">3种“天然洗发水” 改善掉发、白发</a><br></h3>
