--- a/gb/nsc1002.md
+++ b/gb/nsc1002.md
@@ -16,7 +16,6 @@
 <tr><td><h3><a href="https://github.com/qblrme335/djy/blob/master/gb/19/12/2/n11696009.md#1" target="_blank">这些症状是更年期来了 医师教你保养秘诀</a><br></h3><a href="https://github.com/qblrme335/djy/blob/master/gb/19/12/2/n11696009.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2019/12/Menopause-1205-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/qblrme335/djy/blob/master/gb/19/10/2/n11563614.md#1" target="_blank">牛蒡是“回春食材” 专家：3招吃法更清肠抗老</a><br></h3><a href="https://github.com/qblrme335/djy/blob/master/gb/19/10/2/n11563614.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2019/10/burdock-1002-320x200.jpg"></a></td></tr>
 <tr><td><h3><p><strong>饮食、生活、疾病、中医</strong></p></h3></td></tr><tr><td>
-<h3><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/11/n12803636.md#1" target="_blank">【重播】喝茶助防疫吗？6大茶系怎么选</a><br></h3>
 <h3><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/12/n12805998.md#1" target="_blank">有氧运动比增肌训练更好？增肌10大迷思破解</a><br></h3>
 <h3><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/12/n12808226.md#1" target="_blank">三大坏坐姿排名 第一名是它！教你正确坐姿</a><br></h3>
 <h3><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/13/n12808403.md#1" target="_blank">五种食物加强你的免疫系统 而且很常见</a><br></h3>
@@ -28,5 +27,6 @@
 <h3><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/19/n12821479.md#1" target="_blank">【重播】新冠疫苗副作用完整解析 哪种副作用最少？</a><br></h3>
 <h3><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/19/n12822810.md#1" target="_blank">春分是养生关键 不只要养肝！1图看懂怎么吃</a><br></h3>
 <h3><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/20/n12824292.md#1" target="_blank">【重播】变种病毒感染比例大增 第四波疫情恐将至？</a><br></h3>
+<h3><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/23/n12829042.md#1" target="_blank">绿茶一般人不适合喝？名中医教6大类茶养生喝法</a><br></h3>
 <tr><td><h3><a href="https://github.com/qblrme335/djy/blob/master/gb/nsc1002.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/qblrme335/djy/blob/master/gb/nsc1002_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/qblrme335/djy/blob/master/gb/nsc1002_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/qblrme335/djy/blob/master/gb/nsc1002_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/qblrme335/djy/blob/master/gb/nsc1002_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/qblrme335/djy/blob/master/gb/nsc1002_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/qblrme335/djy/blob/master/gb/nsc1002_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/qblrme335/djy/blob/master/gb/nsc1002_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/qblrme335/djy/blob/master/gb/nsc1002_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/qblrme335/djy/blob/master/gb/nsc1002_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/qblrme335/djy/blob/master/gb/nsc1002_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/qblrme335/djy/blob/master/gb/nsc1002.md#1<br><a href="https://github.com/qblrme335/djy/blob/master/gb/nsc1002.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/qblrme335/djy/blob/master/gb/nsc1002.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nsc1002.htm">https://www.epochtimes.com/gb/nsc1002.htm</a>    （国内需<a href="https://github.com/qblrme335/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
